@@ -1,5 +1,15 @@
 2002-12-28  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* gcc -Wall -Werror clean
+	* file.c (loadHTMLstream): unused variable `p'
+	* news.c (news_command): unused variable `c'
+		(news_open): unused variable `tmp'
+		(readNewsgroup): volatile page, qgroup, flag, start, end
+				uninitialized variable `page'
+	* url.c (openURL): unused variable `fw', `r', `stream'
+
+2002-12-28  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* rc: nntpserver, nntpmode, max_news
 
 2002-12-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
@@ -6143,4 +6153,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.653 2002/12/27 16:08:46 ukai Exp $
+$Id: ChangeLog,v 1.654 2002/12/27 16:30:53 ukai Exp $
